--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -86,3 +86,8 @@
 "view.match.target" = "Match Target";
 "view.match.candidates" = "Candidates";
 "view.match.candidates.desc" = "Choose the corresponding nomination.";
+
+// Filter
+"view.filter"   = "Filter";
+"view.filter.dismiss"   = "Dismiss";
+"view.filter.status"    = "Filter by Status";
