--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -86,3 +86,8 @@
 "view.match.target" = "匹配目标";
 "view.match.candidates" = "候选";
 "view.match.candidates.desc" = "选择对应的提名。";
+
+// Filter
+"view.filter"   = "筛选";
+"view.filter.dismiss"   = "关闭";
+"view.filter.status"    = "筛选状态";
