Add filter by reason

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -91,3 +91,4 @@
 "view.filter"   = "Filter";
 "view.filter.dismiss"   = "Dismiss";
 "view.filter.status"    = "Filter by Status";
+"view.filter.reason"    = "Filter by Reason";
