--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -70,6 +70,9 @@
 "view.preferences.google.sync"      = "同步Google硬盘";
 "view.preferences.google.syncNow"   = "现在同步";
 "view.preferences.google.uploadNow" = "现在上传";
+"view.preferences.google.migrate"   = "迁移数据";
+"view.preferences.google.migrate.alert"   = "迁移数据可能会丢弃部分拒绝理由，建议您在迁移前刷新一次。";
+"view.preferences.google.migrate.alert.confirm" = "Migrate";
 "view.preferences.data.importExport"    = "导入 / 导出";
 "view.preferences.data.exportNominations"  = "导出提名";
 "view.preferences.data.importNominations"  = "导入提名";
