--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 
 // Dashboard
 "view.dashboard"    = "仪表盘";
+"view.dashboard.refresh"    = "刷新";
 "view.dashboard.basic.nominations"  = "提名";
 "view.dashboard.reasons"    = "拒绝原因";
 
