--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -36,7 +36,8 @@
 // Dashboard
 "view.dashboard"    = "Dashboard";
 "view.dashboard.refresh"    = "Refresh";
-"view.dashboard.basic.nominations"  = "Nominations";
+"view.dashboard.highlight"  = "Highlight";
+"view.dashboard.highlight.nominations"  = "Nominations";
 "view.dashboard.reasons"    = "Reasons";
 
 // Nomination List
