--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 // Dashboard
 "view.dashboard"    = "Dashboard";
 "view.dashboard.refresh"    = "Refresh";
+"view.dashboard.status" = "Status";
 "view.dashboard.highlight"  = "Highlight";
 "view.dashboard.highlight.nominations"  = "Nominations";
 "view.dashboard.reasons"    = "Reasons";
