--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 // Dashboard
 "view.dashboard"    = "仪表盘";
 "view.dashboard.refresh"    = "刷新";
+"view.dashboard.status" = "状态";
 "view.dashboard.highlight"  = "要点";
 "view.dashboard.highlight.nominations"  = "提名";
 "view.dashboard.reasons"    = "拒绝原因";
