--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -39,6 +39,8 @@
 "view.dashboard.status" = "Status";
 "view.dashboard.highlight"  = "Highlight";
 "view.dashboard.highlight.nominations"  = "Nominations";
+"view.dashboard.gallery"    = "Last 30 Days";
+"view.dashboard.gallery.empty"  = "No nominations.";
 "view.dashboard.reasons"    = "Reasons";
 "view.dashboard.reasons.more"   = "More";
 "view.dashboard.reasons.less"   = "Less";
