--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -39,6 +39,8 @@
 "view.dashboard.status" = "状态";
 "view.dashboard.highlight"  = "要点";
 "view.dashboard.highlight.nominations"  = "提名";
+"view.dashboard.gallery"    = "近30天";
+"view.dashboard.gallery.empty"  = "没有提名。";
 "view.dashboard.reasons"    = "拒绝原因";
 "view.dashboard.reasons.more"   = "更多";
 "view.dashboard.reasons.less"   = "更少";
