Add Link Google Account to DashboardStatusView

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "view.dashboard"    = "Dashboard";
 "view.dashboard.refresh"    = "Refresh";
 "view.dashboard.status" = "Status";
+"view.dashboard.status.linkAccount" = "Link Your Google Account";
 "view.dashboard.highlight"  = "Highlight";
 "view.dashboard.highlight.nominations"  = "Nominations";
 "view.dashboard.gallery"    = "Last 30 Days";
