--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -37,6 +37,7 @@
 "view.dashboard"    = "仪表盘";
 "view.dashboard.refresh"    = "刷新";
 "view.dashboard.status" = "状态";
+"view.dashboard.status.linkAccount" = "连接您的Google账号";
 "view.dashboard.highlight"  = "要点";
 "view.dashboard.highlight.nominations"  = "提名";
 "view.dashboard.gallery"    = "近30天";
