--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -73,6 +73,7 @@
 "view.preferences.google"   = "Google";
 "view.preferences.data"     = "Data";
 "view.preferences.general.refreshOnOpen"    = "Refresh On Open";
+"view.preferences.general.queryAfterLatest" = "Query After Latest";
 "view.preferences.google.account"   = "Google Account";
 "view.preferences.google.link"      = "Link";
 "view.preferences.google.unlink"    = "Unlink";
