--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -60,7 +60,7 @@
 "view.details.scanner"  = "扫描器";
 "view.details.rejectedFor"  = "拒绝原因";
 "view.details.location" = "位置";
-"view.details.location.hint" = "经度,纬度";
+"view.details.location.hint" = "纬度,经度";
 "view.details.location.invalid" = "无效";
 
 // RemoteImage
