--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -55,6 +55,7 @@
 // Nomination Details
 "view.details.edit" = "编辑";
 "view.details.save" = "保存";
+"view.details.cancel"   = "取消";
 "view.details.confirmed"    = "确认";
 "view.details.status"   = "状态";
 "view.details.resulted" = "结束于";
