--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -61,6 +61,8 @@
 "view.details.resulted" = "结束于";
 "view.details.scanner"  = "扫描器";
 "view.details.rejectedFor"  = "拒绝原因";
+"view.details.hide" = "隐藏";
+"view.details.show" = "显示";
 "view.details.location" = "位置";
 "view.details.location.hint" = "纬度,经度";
 "view.details.location.invalid" = "无效";
