--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -84,6 +84,7 @@
 "view.preferences.google"   = "Google";
 "view.preferences.data"     = "数据";
 "view.preferences.general.refreshOnOpen"    = "打开时刷新";
+"view.preferences.general.backgroundRefresh"    = "背景刷新";
 "view.preferences.general.queryAfterLatest" = "仅查询最新邮件";
 "view.preferences.google.account"   = "Google账号";
 "view.preferences.google.link"      = "连接";
@@ -113,3 +114,9 @@
 "view.match.target" = "匹配目标";
 "view.match.candidates" = "候选";
 "view.match.candidates.desc" = "选择对应的提名。";
+
+// Notification
+"notification.refresh.requiresMatch"    = "需要手动匹配";
+"notification.refresh.requiresMatch.desc"   = "部分提名缺少关键数据，需要手动匹配。";
+"notification.refresh.refreshFinished"  = "刷新完成";
+"notification.refresh.refreshFinished.desc" = "更新了%d个提名。";
