--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -43,7 +43,7 @@
 "view.dashboard.status.empty" = "刷新以获取提名";
 "view.dashboard.status.latest" = "最新 ";
 "view.dashboard.highlight"  = "要点";
-"view.dashboard.highlight.nominations"  = "提名";
+"view.dashboard.highlight.all"  = "全部";
 "view.dashboard.gallery"    = "近30天";
 "view.dashboard.gallery.empty"  = "没有提名。";
 "view.dashboard.scanners"   = "扫描器";
