Display result for migration, #6

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -99,6 +99,7 @@
 "view.preferences.google.migrate"   = "Migrate Data";
 "view.preferences.google.migrate.alert"   = "Some reasons might be lost during migrating, it's highly recommended to refresh before migrate.";
 "view.preferences.google.migrate.alert.confirm" = "Migrate";
+"view.preferences.google.migrate.finished %lld" = "Migrated %lld nominations.";
 "view.preferences.data.importExport"    = "Import / Export";
 "view.preferences.data.exportNominations"  = "Export Nominations";
 "view.preferences.data.importNominations"  = "Import Nominations";
