--- a/Shared/Localization/zh-Hans.lproj/Localizable.strings
+++ b/Shared/Localization/zh-Hans.lproj/Localizable.strings
@@ -13,10 +13,11 @@
 // Reasons
 "data.undeclared" = "未指明";
 "data.duplicated" = "重复";
-"data.close"      = "过近";
-"data.criteriaCriteria"     = "不合标准";
+"data.close"    = "过近";
+"data.criteriaCriteria" = "不合标准";
+"data.criteriaNatural"  = "天然地貌";
 "data.criteriaTemporary"    = "临时";
-"data.criteriaGeneric"      = "一般商家";
+"data.criteriaGeneric"  = "一般商家";
 "data.locationMismatched"   = "地点不符";
 "data.locationPrivate"  = "私人";
 "data.photoPlate"   = "车牌";
