Add localization for Pedestrian

--- a/Shared/Localization/en.lproj/Localizable.strings
+++ b/Shared/Localization/en.lproj/Localizable.strings
@@ -19,6 +19,7 @@
 "data.criteriaTemporary"    = "Temporary";
 "data.criteriaGeneric"  = "Generic Store";
 "data.locationMismatched"   = "Mismatched";
+"data.locationPedestrian"   = "Pedestrian";
 "data.locationPrivate"  = "Private";
 "data.photoPlate"   = "License Plate";
 "data.photoQuality" = "Photo Quality";
